# sign-language-translator-backend

./: .gitattributes  .gitignore  README.md  data_test.py  main.py  pyproject.toml
src/app/: FEATURES.md  README.md  requirements.txt  streamlit_app.py
src/model/: __init__.py  model_loader.py
src/model/finetune/: CLASSIFICATION_HEAD_GUIDE.md  __init__.py  dataset.py  eval.py  evaluation_metrics_summary.json  evaluation_report.txt  evaluation_results.json  model_loader.py  preprocess_videos.py  test_eval.py  train.py  train_classifier.py
src/model/finetune/data_engineering/: __init__.py  filter_data.py  validate_videos.py  video_downloader.py
src/model/finetune/evaluation_results/: eval_results.json  eval_results.metrics.json
src/model/finetune/internvl3_5/: eval.py  model_loader.py  train.py  train_classifier.py
src/model/finetune/preprocessed_frames/: 00414.pt  00415.pt  00416.pt  00421.pt  01373.pt  01374.pt  01376.pt  01377.pt  01418.pt  01419.pt  01420.pt  01421.pt  01422.pt  01433.pt  01434.pt  01435.pt  01436.pt  01438.pt  01460.pt  01461.pt  01462.pt  01463.pt  01464.pt  01466.pt  01986.pt  01987.pt  01988.pt  01991.pt  01992.pt  02228.pt  02229.pt  02230.pt  02231.pt  02233.pt  02518.pt  02519.pt  02521.pt  02565.pt  02566.pt  02567.pt  (+1564 more)
src/model/finetune/tb_logs/: events.out.tfevents.1764693698.PF5JCZ8R-A056.1119.0  events.out.tfevents.1764779491.PF5JCZ8R-A056.1048.0  events.out.tfevents.1765366311.PF5JCZ8R-A056.4928.0  events.out.tfevents.1765385037.PF5JCZ8R-A056.1430.0
src/model/finetune/videomae/: dataset.py  (+4 more)
src/model/params/: vlm.yml
(+54 files in other folders)
