[project]
name = "sign-language-detector-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "accelerate>=1.11.0",
   "av>=16.0.1",
   "bitsandbytes>=0.48.2",
   "datasets>=4.4.1",
   "decord>=0.6.0",
   "huggingface-hub>=0.36.0",
   "opencv-python>=4.12.0.88",
   "peft>=0.18.0",
   "python-dotenv>=1.2.1",
   "pytorchvideo>=0.1.5",
   "pyyaml>=6.0.3",
   "scikit-learn>=1.7.2",
   "tensorboard>=2.20.0",
   "torch-directml>=0.2.5.dev240914",
   "transformers>=4.57.1",
   "trl>=0.25.1",
]
